fix gap

--- a/projekt/src/scss/components/header.scss
+++ b/projekt/src/scss/components/header.scss
@@ -11,7 +11,7 @@
     &__brand {
         display: flex;
         align-items: center;
-        gap: .8rem;
+        gap: .5rem;
         font-size: 1.12rem;
     }
 
